@@ -18,11 +18,11 @@ DESCRIPTION
        The  archive format is determined by the file(1) program and as a fall‐
        back by the archive file extension.
 
-       patool supports 7z (.7z), ZIP (.zip, .jar), GZIP (.gz), compress  (.Z),
-       BZIP2  (.bz2),  TAR  (.tar),  ARJ (.arj), CAB (.cab), CPIO (.cpio), RPM
-       (.rpm), DEB (.deb), LZIP (.lz), LZOP (.lzo), LZMA (.lzma),  RAR  (.rar)
-       and XZ (.xz) formats.  It relies on helper applications to handle those
-       archive formats (for example bzip2 for BZIP2 archives).
+       patool supports 7z (.7z), ACE (.ace), ZIP  (.zip,  .jar),  GZIP  (.gz),
+       compress  (.Z),  BZIP2 (.bz2), TAR (.tar), ARJ (.arj), CAB (.cab), CPIO
+       (.cpio), RPM (.rpm), DEB (.deb), LZIP (.lz), LZOP (.lzo), LZMA (.lzma),
+       RAR  (.rar)  and XZ (.xz) formats.  It relies on helper applications to
+       handle those archive formats (for example bzip2 for BZIP2 archives).
 
 EXAMPLES
          patool extract archive.zip otherarchive.rar
