@@ -23,7 +23,7 @@ ArchiveCommands = ('list', 'extract', 'test', 'create')
 
 # Supported archive formats
 ArchiveFormats = ('gzip', 'bzip2', 'tar', 'zip', 'compress', '7z', 'rar',
-  'cab', 'arj', 'cpio', 'rpm', 'deb', 'lzop', 'lzma', 'xz', 'lzip')
+  'cab', 'arj', 'cpio', 'rpm', 'deb', 'lzop', 'lzma', 'xz', 'lzip', 'ace')
 
 # Supported encodings (used with tar for example)
 # Note that all encodings must also be archive formats
@@ -51,6 +51,7 @@ ArchiveMimetypes = {
     'application/x-lzma': 'lzma',
     'application/x-xz': 'xz',
     'application/x-lzip': 'lzip',
+    'application/x-ace': 'ace',
 }
 
 # List of programs supporting the given encoding
@@ -67,6 +68,11 @@ EncodingPrograms = {
 # List of programs supporting the given archive format and command.
 # If command is None, the program supports all commands (list, extract, ...)
 ArchivePrograms = {
+    'ace': {
+        'extract': ('unace',),
+        'test': ('unace',),
+        'list': ('unace',),
+    },
     'bzip2': {
         'extract': ('pbzip2', 'bzip2', '7z'),
         'test': ('pbzip2', 'bzip2', '7z'),
