@@ -86,3 +86,5 @@ class TestMime (unittest.TestCase):
         self.mime_test("t.Z.foo", "application/x-compress", None)
         self.mime_test("t.zip", "application/zip", None)
         self.mime_test("t.zip.foo", "application/zip", None)
+        self.mime_test("t.ace", "application/x-ace", None)
+        self.mime_test("t.ace.foo", "application/x-ace", None)
